* host -> ip in config/testing.ini

--- a/config/testing.ini
+++ b/config/testing.ini
@@ -3,7 +3,7 @@
 [main]
 
 ; Can be: 'auto' for autodetecd external ip address
-host = auto
+ip = auto
 port = 8888
 
 ;; DNS domain name used for server can be overriden by -n option
