* Added Docker image

--- a/docker/wirow.ini
+++ b/docker/wirow.ini
@@ -9,7 +9,6 @@
 ;;  {program}           Path to wirow executable.
 ;;
 
-
 [main]
 
 ;;
@@ -28,7 +27,7 @@
 ;; Example:
 ;;  ip = 0.0.0.0@192.168.1.37
 
-; ip = auto
+ip = auto
 
 
 ;;
@@ -38,7 +37,7 @@
 ;; Overridden by `-p <port>` command line option.
 ;;
 
-; port = 443
+port = 443
 
 
 ;;
@@ -54,14 +53,14 @@
 ;; Option used to pass ACME challenge during process of generating Let's Encrypt TLS certificates.
 ;;
 
-; https_redirect_port = 80
+https_redirect_port = 80
 
 
 ;;
 ;; Data directory with database, screen recordings and uploads.
 ;;
 
-; data = {cwd}
+data = /data
 
 
 ;;
@@ -114,7 +113,7 @@
 ;; WebRTC RTP ports range.
 ;;
 
-; ports = 10000..59999
+ports = 44300..44600
 
 ;; Mediasoup worker options.
 [worker]
