--- a/docker/wirow.ini
+++ b/docker/wirow.ini
@@ -53,7 +53,7 @@ ip = auto
 ;; Option used to pass ACME challenge during process of generating Let's Encrypt TLS certificates.
 ;;
 
-https_redirect_port = 80
+; https_redirect_port = 80
 
 
 ;;
