--- a/docker/wirow.ini
+++ b/docker/wirow.ini
@@ -96,6 +96,11 @@ data = /data
 
 ; verbose = no
 
+;;
+;; Report errors to sentry (configure sentry endpoint on build)
+;;
+
+; report_errors = no
 
 [servers]
 
