* Implemented: Active speaker identification on server side.

--- a/config/development.ini
+++ b/config/development.ini
@@ -113,6 +113,11 @@ threshold = -55
 ;; Interval in ms for checking audio volumes. Default 800.
 interval_ms = 800
 
+[aso]
+
+disabled = no
+
+interval_ms = 300
 
 [acme]
 
