--- a/docs/wirow-configuration.ini
+++ b/docs/wirow-configuration.ini
@@ -297,6 +297,22 @@
 ; interval_ms = 800
 
 
+;; Active spreaker obbserver.
+[aso]
+
+;;
+;; Is active speaker observer disabled.
+;;
+
+; disabled = no
+
+;;
+;; Interval in ms for checking active speaker state. Default 300.
+;;
+
+; interval_ms = 300
+
+
 ;; Scree recording options.
 [recording]
 
