--- a/front/package.json
+++ b/front/package.json
@@ -11,22 +11,22 @@
     "@kurkle/color": "^0.1.9",
     "@rollup/plugin-alias": "^3.1.4",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^22.0.0-14",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-html": "^0.2.3",
-    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@sentry/browser": "^6.12.0",
-    "@sentry/tracing": "^6.12.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@sentry/browser": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "@softmotions/mediasoup-client": "^3.6.51",
     "@tsconfig/svelte": "^3.0.0",
     "@types/debug": "^4.1.7",
     "@types/semver": "^7.3.8",
-    "@types/throttle-debounce": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@types/throttle-debounce": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "anchorme": "^2.1.2",
-    "autoprefixer": "^10.3.4",
+    "autoprefixer": "^10.4.5",
     "bowser": "^2.11.0",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
@@ -35,11 +35,11 @@
     "date-fns": "^2.28.0",
     "debug": "^4.3.2",
     "emotion": "^11.0.0",
-    "eslint": "^8.12.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^39.0.1",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-svelte3": "^3.2.0",
@@ -50,9 +50,9 @@
     "postcss": "^8.3.6",
     "postcss-modules": "^4.2.2",
     "prettier": "^2.3.2",
-    "prettier-plugin-svelte": "^2.4.0",
+    "prettier-plugin-svelte": "^2.7.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.52.8",
+    "rollup": "^2.70.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-filesize": "^9.1.1",
@@ -63,14 +63,14 @@
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "semver": "^7.3.5",
-    "svelte": "^3.46.6",
-    "svelte-check": "^2.5.0",
+    "semver": "^7.3.7",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
     "svelte-intl": "^1.1.4",
-    "svelte-preprocess": "^4.10.5",
-    "svelte2tsx": "^0.5.7",
-    "throttle-debounce": "^3.0.1",
-    "tslib": "^2.3.0",
+    "svelte-preprocess": "^4.10.6",
+    "svelte2tsx": "^0.5.9",
+    "throttle-debounce": "^4.0.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.3.5"
   },
   "scripts": {
