* Sturn/turn servers now used

--- a/config/development.ini
+++ b/config/development.ini
@@ -52,8 +52,8 @@ verbose = yes
 [servers]
 
 # turn_servers = user:password@host
-stun_servers = stun.l.google.com:19305 stun1.l.google.com:19305
-               stun2.l.google.com:19305
+stun_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305
+               stun:stun2.l.google.com:19305
 
 [rtc]
 
