--- a/docs/wirow-configuration.ini
+++ b/docs/wirow-configuration.ini
@@ -104,7 +104,7 @@
 ;;
 ;; Example:
 ;; turn_servers = user:password@host
-;; stun_servers = stun.l.google.com:19305 stun1.l.google.com:19305 stun2.l.google.com:19305
+;; stun_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305 stun:stun2.l.google.com:19305
 
 
 ;; RTC / WebRTC options.
