* Better server cfg parsing

--- a/config/development.ini
+++ b/config/development.ini
@@ -51,7 +51,7 @@ verbose = yes
 
 [servers]
 
-# turn_servers = user:password@host
+# turn_servers = user:password@turns:numb.viageie.ca:3478
 stun_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305
                stun:stun2.l.google.com:19305
 
