--- a/docs/wirow-configuration.ini
+++ b/docs/wirow-configuration.ini
@@ -103,7 +103,7 @@
 ;; Stun and turn servers.
 ;;
 ;; Example:
-;; turn_servers = user:password@host
+;; turn_servers = user:password@turns:numb.viageie.ca:3478
 ;; stun_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305 stun:stun2.l.google.com:19305
 
 
