* ice_servers config parameter replaces deprecated turn_servers/stun_server options

--- a/config/development.ini
+++ b/config/development.ini
@@ -25,9 +25,6 @@ cert_key_file = {config_file_dir}/server-eckey.pem
 ; Max age of sessions cookies in seconds. Default 30 days
 session_cookies_max_age = 2592000
 
-; Time of rooms inactivity in seconds after which server enter "deep idle" mode (it is safe to backup or restart server)
-deep_idle_time = 300
-
 [public_overlays]
 
 /bundle.css = {cwd}/front/dist/bundle.css
@@ -51,9 +48,10 @@ verbose = yes
 
 [servers]
 
-# turn_servers = user:password@turns:numb.viageie.ca:3478
-stun_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305
-               stun:stun2.l.google.com:19305
+ice_servers = openrelayproject:openrelayproject@turn:openrelay.metered.ca:443?transport=tcp
+
+; ice_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305
+;               stun:stun2.l.google.com:19305
 
 [rtc]
 
