--- a/docker/wirow.ini
+++ b/docker/wirow.ini
@@ -106,9 +106,13 @@ data = /data
 
 ;; Stun and turn servers.
 ;;
-;; Example:
-;; turn_servers = user:password@host
-;; stun_servers = stun.l.google.com:19305 stun1.l.google.com:19305 stun2.l.google.com:19305
+;; Examples:
+;; ice_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305 stun:stun2.l.google.com:19305
+;; ice_servers = turn:openrelay.metered.ca:444
+;; ice_servers = turn:openrelay.metered.ca:443?transport=tcp
+;; ice_servers = openrelayproject:openrelayproject@turn:openrelay.metered.ca:443?transport=tcp
+
+;
 
 
 ;; RTC / WebRTC options.
