--- a/docs/wirow-configuration.ini
+++ b/docs/wirow-configuration.ini
@@ -102,9 +102,13 @@
 
 ;; Stun and turn servers.
 ;;
-;; Example:
-;; turn_servers = user:password@turns:numb.viageie.ca:3478
-;; stun_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305 stun:stun2.l.google.com:19305
+;; Examples:
+;; ice_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305 stun:stun2.l.google.com:19305
+;; ice_servers = turn:openrelay.metered.ca:444
+;; ice_servers = turn:openrelay.metered.ca:443?transport=tcp
+;; ice_servers = openrelayproject:openrelayproject@turn:openrelay.metered.ca:443?transport=tcp
+
+;
 
 
 ;; RTC / WebRTC options.
