--- a/src/rct/tests/rct_test2.ini
+++ b/src/rct/tests/rct_test2.ini
@@ -12,8 +12,8 @@ verbose = yes
 
 [servers]
 
-stun_servers = stun.l.google.com:19305 stun1.l.google.com:19305
-               stun2.l.google.com:19305
+;ice_servers = stun.l.google.com:19305 stun1.l.google.com:19305
+;               stun2.l.google.com:19305
 
 [rtc]
 
