--- a/config/development.ini
+++ b/config/development.ini
@@ -48,10 +48,9 @@ verbose = yes
 
 [servers]
 
-ice_servers = openrelayproject:openrelayproject@turn:openrelay.metered.ca:443?transport=tcp
-
-; ice_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305
-;               stun:stun2.l.google.com:19305
+;; ice_servers = openrelayproject:openrelayproject@turn:openrelay.metered.ca:443?transport=tcp
+;; ice_servers = stun:stun.l.google.com:19305 stun:stun1.l.google.com:19305
+;;               stun:stun2.l.google.com:19305
 
 [rtc]
 
