--- a/front-whiteboard/package.json
+++ b/front-whiteboard/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@excalidraw/excalidraw": "file:../extra/excalidraw/src/packages/excalidraw/",
+    "@excalidraw/excalidraw": "link:../extra/excalidraw/src/packages/excalidraw",
     "@types/node": "^17.0.35",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
