* fix: Allows session cookies removal on browser closing. (session_cookies_max_age .ini param)   #12

--- a/config/development.ini
+++ b/config/development.ini
@@ -23,6 +23,7 @@ cert_key_file = {config_file_dir}/server-eckey.pem
 # http_header = 'Access-Control-Allow-Headers' '*'
 
 ; Max age of sessions cookies in seconds. Default 30 days
+; If -1 specified the session cookies will be removed when browser closed.
 session_cookies_max_age = 2592000
 
 [public_overlays]
