--- a/docker/wirow.ini
+++ b/docker/wirow.ini
@@ -84,6 +84,7 @@ data = /data
 ;; Max age of sessions cookies in seconds.
 ;; Default: 2592000 (30 days)
 ;;
+;; If -1 specified the session cookies will be removed when browser closed.
 
 ; session_cookies_max_age = 2592000
 
