--- a/docs/wirow-configuration.ini
+++ b/docs/wirow-configuration.ini
@@ -85,6 +85,8 @@
 ;; Max age of sessions cookies in seconds.
 ;; Default: 2592000 (30 days)
 ;;
+;; If -1 specified the session cookies will be removed when browser closed.
+;;
 
 ; session_cookies_max_age = 2592000
 
