* Added ENABLE_MEDIASOUP CMake option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ option(LICENSE_SSL_VERIFY "Verify SSL connections" ON)
 option(CREATE_DEV_USER "Create dev testing user" OFF)
 option(ENABLE_WHITEBOARD "Enable whiteboard feature" ON)
 option(ENABLE_RECORDING "Enable recording feature" ON)
+option(ENABLE_MEDIASOUP "Enable embedded mediasoup worker" ON)
 option(LIMIT_REGISTERED_USERS "Limit registered users" OFF)
 option(SENTRY_DSN "Backend sentry dsn if any or OFF" OFF)
 option(SENTRY_FRONT_DSN "Frontend sentry dsn if any or OFF" OFF)
@@ -134,6 +135,7 @@ message("${PROJECT_NAME} PROJECT: ${CHANGELOG_LAST_LINE}")
 message("${PROJECT_NAME} CREATE_DEV_USER: ${CREATE_DEV_USER}")
 message("${PROJECT_NAME} ENABLE_WHITEBOARD: ${ENABLE_WHITEBOARD}")
 message("${PROJECT_NAME} ENABLE_RECORDING: ${ENABLE_RECORDING}")
+message("${PROJECT_NAME} ENABLE_MEDIASOUP: ${ENABLE_MEDIASOUP}")
 message("${PROJECT_NAME} LIMIT_REGISTERED_USERS: ${LIMIT_REGISTERED_USERS}")
 message("${PROJECT_NAME} SENTRY_DSN: ${SENTRY_DSN}")
 message("${PROJECT_NAME} SENTRY_FRONT_DSN: ${SENTRY_FRONT_DSN}")
