--- a/src/lic/lic_env.h.in
+++ b/src/lic/lic_env.h.in
@@ -24,6 +24,8 @@
 
 #cmakedefine01 ENABLE_RECORDING
 
+#cmakedefine01 ENABLE_MEDIASOUP
+
 #cmakedefine LIMIT_REGISTERED_USERS @LIMIT_REGISTERED_USERS@
 
 #cmakedefine GR_BUILD_TYPE @GR_BUILD_TYPE@
