--- a/front/package.json
+++ b/front/package.json
@@ -5,73 +5,73 @@
   "license": "AGPL-3.0",
   "main": "src/index.ts",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-typescript": "^7.15.0",
-    "@kurkle/color": "^0.1.9",
-    "@rollup/plugin-alias": "^3.1.4",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-html": "^0.2.3",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@sentry/browser": "^6.19.7",
-    "@sentry/tracing": "^6.19.7",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@kurkle/color": "^0.2.1",
+    "@rollup/plugin-alias": "^4.0.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-html": "^1.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "@sentry/browser": "^7.17.2",
+    "@sentry/tracing": "^7.17.2",
     "@softmotions/mediasoup-client": "^3.6.54",
     "@tsconfig/svelte": "^3.0.0",
     "@types/debug": "^4.1.7",
-    "@types/semver": "^7.3.8",
-    "@types/throttle-debounce": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@types/semver": "^7.3.13",
+    "@types/throttle-debounce": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "anchorme": "^2.1.2",
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "^10.4.13",
     "bowser": "^2.11.0",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "compare-versions": "^5.0.1",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.1.7",
-    "date-fns": "^2.28.0",
+    "cssnano": "^5.1.14",
+    "date-fns": "^2.29.3",
     "debug": "^4.3.2",
     "emotion": "^11.0.0",
-    "eslint": "^8.14.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-jsdoc": "^39.4.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-svelte3": "^3.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-svelte3": "^4.0.0",
     "events": "^3.3.0",
     "focus-visible": "^5.2.0",
     "format-message": "^6.2.3",
-    "node-sass": "^7.0.1",
-    "postcss": "^8.3.6",
-    "postcss-modules": "^4.2.2",
-    "prettier": "^2.3.2",
-    "prettier-plugin-svelte": "^2.7.0",
+    "postcss": "^8.4.18",
+    "postcss-modules": "^5.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.8.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.70.2",
+    "rollup": "^3.2.3",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-css-only": "^4.2.0",
     "rollup-plugin-filesize": "^9.1.1",
-    "rollup-plugin-gzip": "^3.0.1",
+    "rollup-plugin-gzip": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-serve": "^2.0.1",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "semver": "^7.3.7",
-    "svelte": "^3.47.0",
-    "svelte-check": "^2.7.0",
+    "sass": "^1.55.0",
+    "svelte": "^3.52.0",
+    "svelte-check": "^2.9.2",
     "svelte-intl": "^1.1.4",
-    "svelte-preprocess": "^4.10.6",
-    "svelte2tsx": "^0.5.9",
-    "throttle-debounce": "^4.0.1",
+    "svelte-preprocess": "^4.10.7",
+    "svelte2tsx": "^0.5.20",
+    "throttle-debounce": "^5.0.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "check": "svelte-check",
